fix: add API version to the URL
