# docs/api.yaml
@@ -2,14 +2,14 @@ openapi: 3.0.0
 info:
   title: Stationboard API
   description: Documentation de l'API pour récupérer les horaires des stations, prenant en charge les formats JSON et PDF.
-  version: 1.0.2
+  version: 1.0.3
 
 servers:
   - url: http://localhost:8080
     description: Serveur local pour l'API Stationboard
 
 paths:
-  /api/stationboard/{country}/{station}:
+  /api/v1/stationboard/{country}/{station}:
     get:
       summary: Récupère les horaires des stations pour une ville donnée
       description: |
